[workspace]
resolver = "2"

members = [
    # Libraries
    "libs/*",

    # Running services
    # "runtime/*",

    # Example services
    # "examples/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["norpie"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
